--- a/page_4.html
+++ b/page_4.html
@@ -195,10 +195,11 @@
             </div>
         </footer>
     </div>
+    <script src="script/formatPhoneNumber.js"></script>
     <script src="script/hideAllCards.js"></script>
     <script src="script/drop_navigation.js"></script>
     <script src="script/script.js"></script>
     <script src="script/scriptPage2.js"></script>
-    <script src="script/ratingStarScript.js"></script>
+
 </body>
 </html>
